# coruscant

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  PRODUCT.md  PROJECT_CONTEXT.md  README.md  docker-compose.prod.yml  docker-compose.screening.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  labels.md  release-and-milestones.md  repository-guidelines.md
apps/: README.md
backend/: README.md
config/: companies.yml  entities.yml  instruments.yml  sources.yml
docker/: README.md  api.Dockerfile
docs/: BUILD-STATE.md  PLATFORM.md  README.md  global-exposure-architecture.md  screening-runbook.md
engineering/: README.md
experiments/: README.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
graph/: README.md
infrastructure/: README.md
ingestion/: README.md
knowledge/: README.md
llm/: README.md
ontology/: README.md
scripts/: README.md  onboard_companies.py  onboard_ftse.py  onboard_holdings.py  onboard_instruments.py  recompute_intelligence.py  recompute_taxonomy.py  smoke.sh
tests/: README.md  test_alerts.py  test_analyst.py  test_analyst_experience.py  test_anchoring.py  test_api.py  test_api_composition.py  test_api_extended.py  test_api_intelligence.py  test_api_portfolio.py  test_api_public.py  test_api_screening.py  test_auth.py  test_background_evaluation.py  test_catalog.py  test_cli.py  test_commercialization.py  test_config.py  test_content_visibility.py  test_coverage.py  test_disclosure_filter.py  test_embeddings.py  test_entitlement_and_keys.py  test_entity_graph.py  test_foundation.py  test_generic_pipeline.py  test_graph_store.py  (+43 more)
(+313 files in other folders)
